--- a/Module7/Basic/advanceapp/package.json
+++ b/Module7/Basic/advanceapp/package.json
@@ -6,8 +6,11 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.3",
     "web-vitals": "^4.2.4"
