--- a/Module7/Basic/todo-app/package.json
+++ b/Module7/Basic/todo-app/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "advanceapp",
+  "name": "todo-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-firebase/firestore": "^0.5.5",
-    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
-    "firebase": "^9.23.0",
-    "json-server": "^1.0.0-beta.3",
+    "firebase": "^11.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.0.2",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.3",
     "web-vitals": "^4.2.4"
