--- a/Module8(Node)/finalproject/package.json
+++ b/Module8(Node)/finalproject/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "filehandling",
+  "name": "finalproject",
   "version": "1.0.0",
-  "main": "\\",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -11,9 +11,10 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9",
-    "path": "^0.12.7"
+    "mongoose": "^8.9.2",
+    "nodemon": "^3.1.9"
   }
 }
