--- a/Module8(Node)/restapiserver/package.json
+++ b/Module8(Node)/restapiserver/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "filehandling",
+  "name": "restapiserver",
   "version": "1.0.0",
-  "main": "\\",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "start",
     "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-server": "^14.1.1",
     "nodemon": "^3.1.9",
     "path": "^0.12.7"
   }
